--- a/ChangeLog
+++ b/ChangeLog
@@ -41,6 +41,9 @@ Tools:
 * vshadowmount
   - dokan fix volume size hints
 
+20130509
+* worked on multi-threading support
+
 20130505
 * added libvshadow_volume_get_store_identifier function
 * worked on multi-threading support
