--- a/manuals/vshadowmount.1
+++ b/manuals/vshadowmount.1
@@ -1,4 +1,4 @@
-.Dd January 31, 2014
+.Dd August 31, 2014
 .Dt vshadowmount
 .Os libvshadow
 .Sh NAME
@@ -29,7 +29,7 @@ The options are as follows:
 .It Fl h
 shows this help
 .It Fl o Ar offset
-specify the volume offset
+specify the volume offset in bytes
 .It Fl v
 verbose output to stderr
 .It Fl V
