Changes for deployment.

--- a/ChangeLog
+++ b/ChangeLog
@@ -47,6 +47,9 @@ Tools:
 * vshadowmount
   - dokan fix volume size hints
 
+20141027
+* changes for deployment
+
 20141023
 * changes for deployment
 
