--- a/ChangeLog
+++ b/ChangeLog
@@ -44,6 +44,10 @@ Tools:
 * vshadowmount
   - dokan fix volume size hints
 
+20141223
+* worked on Python 3 support
+* worked on tests
+
 20141201
 * code clean up
 
