--- a/ChangeLog
+++ b/ChangeLog
@@ -44,6 +44,9 @@ Tools:
 * vshadowmount
   - dokan fix volume size hints
 
+20150905
+* updated dependencies
+
 20150719
 * worked on signature check
 
