--- a/manuals/libvshadow.3
+++ b/manuals/libvshadow.3
@@ -1,4 +1,4 @@
-.Dd January  9, 2016
+.Dd March 26, 2016
 .Dt libvshadow 3
 .Os libvshadow
 .Sh NAME
@@ -137,6 +137,7 @@ For the actual return values see "libvshadow.h".
 None
 .Sh FILES
 None
+.Sh NOTES
 libvshadow allows to be compiled with wide character support (wchar_t).
 
 To compile libvshadow with wide character support use:
