Updated documentation links.

--- a/README
+++ b/README
@@ -8,8 +8,8 @@ Project information:
 
 Also see:
 
-* OSDFC 2012: Paper - Windowless Shadow Snapshots: https://googledrive.com/host/0B3fBvzttpiiSZDZXRFVMdnZCeHc/Paper%20-%20Windowless%20Shadow%20Snapshots.pdf
-* OSDFC 2012: Slides - Windowless Shadow Snapshots: https://googledrive.com/host/0B3fBvzttpiiSZDZXRFVMdnZCeHc/Slides%20-%20Windowless%20Shadow%20Snapshots.pdf
+* OSDFC 2012: Paper - Windowless Shadow Snapshots: https://github.com/libyal/documentation/blob/master/Paper%20-%20Windowless%20Shadow%20Snapshots.pdf
+* OSDFC 2012: Slides - Windowless Shadow Snapshots: https://github.com/libyal/documentation/blob/master/Slides%20-%20Windowless%20Shadow%20Snapshots.pdf
 
 Work in progress:
 
