Worked on tests

--- a/ChangeLog
+++ b/ChangeLog
@@ -44,124 +44,8 @@ Tools:
 * vshadowmount
   - dokan fix volume size hints
 
-20160109
-* worked on Python 3 support
-* worked on win2k3 format support
-
-20160108
-* 2016 update
-
-20151220
-* changes for deployment
-* updated dependencies
-
-20150905
-* updated dependencies
-
-20150719
-* worked on signature check
-
-20150106
-* 2015 update
-
-20141223
-* worked on Python 3 support
-* worked on tests
-
-20141201
-* code clean up
-
-20141114
-* code clean up
-* worked on multi-threading support
-
-20141104
-* removed deprecated functions
-  - libvshadow_store_read_random
-  - pyvshadow.store.read_random
-
-20141027
-* changes for deployment
-
-20141023
-* changes for deployment
-
-20141017
-* changes for deployment
-
-20140928
-* removed README.macosx
-* changes for project site move
-
-20140901
-* bug fix in Python-bindings
-* Code clean up
-
-20140731
-* updated dependencies
-* worked on Python bindings
-
-20140531
-* updated dependencies
-
-20140325
-* worked on setup.py
-
-20140323
-* worked on Python bindings
-
-20140131
-* 2014 update
-* updated dependencies
-
-20131211
-* worked on Python bindings
-
-20131209
-* worked on Python bindings
-  - changed return value check of libvshadow_store_read_buffer to allow for
-    non read size valid read count values
-
-20131203
-* worked on Python bindings
-  - subtle bug fix where python file-like object returns an int object
-    instead of long object
-  - improved error reporting
-* updated libcerror
-
-20131003
-* updated dependencies
-* worked on setup.py, largely for MSI builds
-* updated msvscpp files
-
-20130723
-* fixes for 32-bit WINAPI build of pyvshadow in file object glue code
-
-20130721
-* Changes for stand-alone libbfio build
-* updated msvscpp files
-
-20130718
-* remove unnecessary restriction in library include headers
-* updated dependencies
-
-20130509
-* worked on multi-threading support
-
-20130505
-* added libvshadow_volume_get_store_identifier function
-* worked on multi-threading support
-* slight improvement of error tolerability of catalog parsing
-
-20130504
-* added libcthreads
-* worked on multi-threading support
-* changes to read block descriptors on demand improves vshadowinfo preformance
-* worked on tests
-* fixes for multiple open/close on the same volume object
-* fixed issue in read buffer due to recent changes
-
 20130503
+* see `git log' for more recent change log
 * added store read from file IO handle function
 * vshadowmount small changes
 
