--- a/manuals/vshadowinfo.1
+++ b/manuals/vshadowinfo.1
@@ -1,4 +1,4 @@
-.Dd August 31, 2014
+.Dd March  5, 2019
 .Dt vshadowinfo
 .Os libvshadow
 .Sh NAME
@@ -8,7 +8,7 @@
 .Nm vshadowinfo
 .Op Fl o Ar offset
 .Op Fl ahvV
-.Va Ar source
+.Ar source
 .Sh DESCRIPTION
 .Nm vshadowinfo
 is a utility to determine information about a Windows NT Volume Shadow Snapshot (VSS) volume
