--- a/manuals/vshadowmount.1
+++ b/manuals/vshadowmount.1
@@ -1,4 +1,4 @@
-.Dd August 31, 2014
+.Dd March  5, 2019
 .Dt vshadowmount
 .Os libvshadow
 .Sh NAME
@@ -9,7 +9,7 @@
 .Op Fl o Ar offset
 .Op Fl X Ar extended_options
 .Op Fl hvV
-.Va Ar source
+.Ar source
 .Sh DESCRIPTION
 .Nm vshadowmount
 is a utility to mount a Windows NT Volume Shadow Snapshot (VSS) volume
