--- a/documentation/Volume Shadow Snapshot (VSS) format.asciidoc
+++ b/documentation/Volume Shadow Snapshot (VSS) format.asciidoc
@@ -30,7 +30,7 @@ this type of volume format.
 == License
 
 ....
-Copyright (C) 2011-2019, Joachim Metz <joachim.metz@gmail.com>.
+Copyright (C) 2011-2020, Joachim Metz <joachim.metz@gmail.com>.
 Permission is granted to copy, distribute and/or modify this document under the
 terms of the GNU Free Documentation License, Version 1.3 or any later version
 published by the Free Software Foundation; with no Invariant Sections, no
@@ -62,6 +62,7 @@ Updates for Windows 8 Consumer Preview.
 | 0.0.13 | J.B. Metz | December 2014 | Switched to asccidoc format.
 | 0.0.14 | J.B. Metz | January 2016 | Small changes.
 | 0.0.15 | J.B. Metz | March 2019 | asciidoc format changes.
+| 0.0.16 | J.B. Metz | May 2020 | Added note about scoped snapshots.
 |===
 
 :numbered:
@@ -699,6 +700,25 @@ Libvshadow as of 20120915 detects this scenario it will return the corrupt
 value as store size but the volume size will be detected based on the NTFS
 volume headers if possible.
 
+=== Scope snapshots
+
+Technically scoped snaphots are a feature of volsnapa as of of Windows 8 or
+Windws Server 2012 and not a corruption scenario. It has been captured as a
+corruption scenario since it leads to some interesting side effects within
+file content of the snapshot.
+
+Scope snapshots functionality can be controlled via the Windows Registry value:
+
+....
+Key path: HKEY_LOCAL_MACHINE\SOFTWARE\Microsoft\Windows NT\CurrentVersion\SystemRestore
+Value name: ScopeSnapshots
+....
+
+Per `[MCBSYS]` a scope snapshot is a special volume snapshot for volsnap
+performance, which is mainly used by Windows critical updates. Scope means
+the volsnap only creates Copy on Write (Shadow) volume for the files that
+are involved in the updates instead of all the files on the volume.
+
 == Notes
 
 If the VSS_VOLSNAP_ATTR_NO_AUTORECOVERY flag is set in the shadow copy context,
@@ -759,6 +779,16 @@ set and can only be read in multitudes of the sector size.
 |===
 | Title | Shadow Copy
 | URL | http://en.wikipedia.org/wiki/Volume_Shadow_Copy_Service
+|===
+
+`[MCBSYS]`
+
+[cols="1,5",options="header"]
+|===
+| Title | Scoped Snapshots vmicvss Error 13 on Server 2012, Windows 8
+| Author(s) | Mark Berry
+| Date | May 6, 2013
+| URL | https://www.mcbsys.com/blog/2013/05/scoped-snapshots-vmicvss-error-13-on-server-2012-windows-8/
 |===
 
 [appendix]
