--- a/documentation/Volume Shadow Snapshot (VSS) format.asciidoc
+++ b/documentation/Volume Shadow Snapshot (VSS) format.asciidoc
@@ -30,7 +30,7 @@ for the libvshadow project.
 == License
 
 ....
-Copyright (C) 2011-2020, Joachim Metz <joachim.metz@gmail.com>.
+Copyright (C) 2011-2022, Joachim Metz <joachim.metz@gmail.com>.
 Permission is granted to copy, distribute and/or modify this document under the
 terms of the GNU Free Documentation License, Version 1.3 or any later version
 published by the Free Software Foundation; with no Invariant Sections, no
@@ -63,6 +63,7 @@ Updates for Windows 8 Consumer Preview.
 | 0.0.14 | J.B. Metz | January 2016 | Small changes.
 | 0.0.15 | J.B. Metz | March 2019 | asciidoc format changes.
 | 0.0.16 | J.B. Metz | May 2020 | Added note about scoped snapshots.
+| 0.0.17 | J.B. Metz | August 2022 | Formatting changes.
 |===
 
 :numbered:
@@ -144,7 +145,6 @@ Contains a GUID
 |===
 
 === Version
-
 
 [cols="1,1,5",options="header"]
 |===
